411709: Fix text-align issues

--- a/src/server/common/components/detailed-list/_detailed-list.scss
+++ b/src/server/common/components/detailed-list/_detailed-list.scss
@@ -22,11 +22,12 @@
 }
 
 .app-detailed-list__item-primary {
-  flex: 6;
+  flex: 5;
 }
 
 .app-detailed-list__item-secondary {
-  flex: 1.1;
+  flex: 1;
+  text-align: right;
 }
 
 .app-detailed-list--inverse {
